<resources>
    <string name="title_welcome">Добро пожаловать!</string>
    <string name="title_login_hint">Укажите логин и пароль, которые вы использовали для входа</string>
    <string name="title_input_hint_login">Логин</string>
    <string name="title_input_hint_password">Пароль</string>
    <string name="title_sign_in">Войти</string>
    <string name="title_some_error">Что-то пошло не так,\n попробуйте войти позже</string>
    <string name="title_invalid_credentials">Неверный логин или пароль</string>
    <string name="title_eng_invalid_credentials">Invalid (username|password)</string>
    <string name="invalid_pin_message">Неверный пин-код</string>
    <string name="title_make_pin">Придумайте пин-код для быстрого входа</string>
    <string name="title_enter_pin_again">Повторите  ваш пин-код</string>
</resources>
