<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.lockwood.themoviedb.login.presentation.ui.LoginActivity">

    <TextView
        android:id="@+id/login_title_text_view"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_hint_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/title_login_hint"
        android:textAppearance="@style/Regular"
        android:textColor="@color/light"
        android:textSize="@dimen/text_size_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title_text_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hint_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_input_hint_login"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_input_hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:textAppearance="@style/Regular"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_regular"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        tools:text="@string/title_invalid_login_or_password_error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Button.Actionable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/title_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_text_view"
        app:layout_constraintVertical_bias="1.0"
        tools:enabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>